LISP_INTERPRETER/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> ( expression )
Rule 2     expression -> + factor factor
Rule 3     expression -> - factor factor
Rule 4     expression -> * factor factor
Rule 5     expression -> / factor factor
Rule 6     expression -> POW factor factor
Rule 7     expression -> < factor factor
Rule 8     expression -> > factor factor
Rule 9     expression -> EQ factor factor
Rule 10    expression -> NEQ factor factor
Rule 11    expression -> LE factor factor
Rule 12    expression -> GE factor factor
Rule 13    expression -> ISEQ factor factor
Rule 14    expression -> AND factor factor
Rule 15    expression -> OR factor factor
Rule 16    expression -> ABS factor
Rule 17    expression -> ROUND factor
Rule 18    expression -> ISNUMBER factor
Rule 19    expression -> NOT factor
Rule 20    expression -> DEF ID expression
Rule 21    expression -> IF ( expression ) ( expression ) ( expression )
Rule 22    expression -> LIST ( list_prod )
Rule 23    expression -> DEFUN ( name ) ( variables ) ( fun_body )
Rule 24    expression -> ID ( list_prod )
Rule 25    name -> ID
Rule 26    variables -> list_prod
Rule 27    fun_body -> expression
Rule 28    expression -> factor
Rule 29    expression -> MIN listy
Rule 30    expression -> MAX listy
Rule 31    expression -> CAR listy
Rule 32    expression -> CDR listy
Rule 33    expression -> LEN listy
Rule 34    expression -> APPEND listy listy
Rule 35    listy -> ID
Rule 36    listy -> LIST ( list_prod )
Rule 37    list_prod -> factor
Rule 38    list_prod -> list_prod factor
Rule 39    factor -> ID
Rule 40    factor -> INTEGER
Rule 41    factor -> FLOAT
Rule 42    factor -> - INTEGER
Rule 43    factor -> - FLOAT
Rule 44    factor -> ( expression )

Terminals, with rules where they appear

(                    : 1 21 21 21 22 23 23 23 24 36 44
)                    : 1 21 21 21 22 23 23 23 24 36 44
*                    : 4
+                    : 2
-                    : 3 42 43
/                    : 5
<                    : 7
>                    : 8
ABS                  : 16
AND                  : 14
APPEND               : 34
CAR                  : 31
CDR                  : 32
DEF                  : 20
DEFUN                : 23
EQ                   : 9
FLOAT                : 41 43
GE                   : 12
ID                   : 20 24 25 35 39
IF                   : 21
INTEGER              : 40 42
ISEQ                 : 13
ISNUMBER             : 18
LE                   : 11
LEN                  : 33
LIST                 : 22 36
MAX                  : 30
MIN                  : 29
NEQ                  : 10
NOT                  : 19
OR                   : 15
POW                  : 6
ROUND                : 17
error                : 

Nonterminals, with rules where they appear

S                    : 0
expression           : 1 20 21 21 21 27 44
factor               : 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 17 18 19 28 37 38
fun_body             : 23
list_prod            : 22 24 26 36 38
listy                : 29 30 31 32 33 34 34
name                 : 23
variables            : 23

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . ( expression )

    (               shift and go to state 2

    S                              shift and go to state 1

state 1

    (0) S' -> S .



state 2

    (1) S -> ( . expression )
    (2) expression -> . + factor factor
    (3) expression -> . - factor factor
    (4) expression -> . * factor factor
    (5) expression -> . / factor factor
    (6) expression -> . POW factor factor
    (7) expression -> . < factor factor
    (8) expression -> . > factor factor
    (9) expression -> . EQ factor factor
    (10) expression -> . NEQ factor factor
    (11) expression -> . LE factor factor
    (12) expression -> . GE factor factor
    (13) expression -> . ISEQ factor factor
    (14) expression -> . AND factor factor
    (15) expression -> . OR factor factor
    (16) expression -> . ABS factor
    (17) expression -> . ROUND factor
    (18) expression -> . ISNUMBER factor
    (19) expression -> . NOT factor
    (20) expression -> . DEF ID expression
    (21) expression -> . IF ( expression ) ( expression ) ( expression )
    (22) expression -> . LIST ( list_prod )
    (23) expression -> . DEFUN ( name ) ( variables ) ( fun_body )
    (24) expression -> . ID ( list_prod )
    (28) expression -> . factor
    (29) expression -> . MIN listy
    (30) expression -> . MAX listy
    (31) expression -> . CAR listy
    (32) expression -> . CDR listy
    (33) expression -> . LEN listy
    (34) expression -> . APPEND listy listy
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    +               shift and go to state 5
    -               shift and go to state 7
    *               shift and go to state 8
    /               shift and go to state 9
    POW             shift and go to state 10
    <               shift and go to state 11
    >               shift and go to state 12
    EQ              shift and go to state 13
    NEQ             shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    ISEQ            shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19
    ABS             shift and go to state 20
    ROUND           shift and go to state 21
    ISNUMBER        shift and go to state 22
    NOT             shift and go to state 23
    DEF             shift and go to state 24
    IF              shift and go to state 26
    LIST            shift and go to state 27
    DEFUN           shift and go to state 28
    ID              shift and go to state 25
    MIN             shift and go to state 29
    MAX             shift and go to state 30
    CAR             shift and go to state 31
    CDR             shift and go to state 32
    LEN             shift and go to state 33
    APPEND          shift and go to state 34
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    (               shift and go to state 3

    expression                     shift and go to state 4
    factor                         shift and go to state 6

state 3

    (44) factor -> ( . expression )
    (2) expression -> . + factor factor
    (3) expression -> . - factor factor
    (4) expression -> . * factor factor
    (5) expression -> . / factor factor
    (6) expression -> . POW factor factor
    (7) expression -> . < factor factor
    (8) expression -> . > factor factor
    (9) expression -> . EQ factor factor
    (10) expression -> . NEQ factor factor
    (11) expression -> . LE factor factor
    (12) expression -> . GE factor factor
    (13) expression -> . ISEQ factor factor
    (14) expression -> . AND factor factor
    (15) expression -> . OR factor factor
    (16) expression -> . ABS factor
    (17) expression -> . ROUND factor
    (18) expression -> . ISNUMBER factor
    (19) expression -> . NOT factor
    (20) expression -> . DEF ID expression
    (21) expression -> . IF ( expression ) ( expression ) ( expression )
    (22) expression -> . LIST ( list_prod )
    (23) expression -> . DEFUN ( name ) ( variables ) ( fun_body )
    (24) expression -> . ID ( list_prod )
    (28) expression -> . factor
    (29) expression -> . MIN listy
    (30) expression -> . MAX listy
    (31) expression -> . CAR listy
    (32) expression -> . CDR listy
    (33) expression -> . LEN listy
    (34) expression -> . APPEND listy listy
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    +               shift and go to state 5
    -               shift and go to state 7
    *               shift and go to state 8
    /               shift and go to state 9
    POW             shift and go to state 10
    <               shift and go to state 11
    >               shift and go to state 12
    EQ              shift and go to state 13
    NEQ             shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    ISEQ            shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19
    ABS             shift and go to state 20
    ROUND           shift and go to state 21
    ISNUMBER        shift and go to state 22
    NOT             shift and go to state 23
    DEF             shift and go to state 24
    IF              shift and go to state 26
    LIST            shift and go to state 27
    DEFUN           shift and go to state 28
    ID              shift and go to state 25
    MIN             shift and go to state 29
    MAX             shift and go to state 30
    CAR             shift and go to state 31
    CDR             shift and go to state 32
    LEN             shift and go to state 33
    APPEND          shift and go to state 34
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    (               shift and go to state 3

    expression                     shift and go to state 37
    factor                         shift and go to state 6

state 4

    (1) S -> ( expression . )

    )               shift and go to state 38


state 5

    (2) expression -> + . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 39

state 6

    (28) expression -> factor .

    )               reduce using rule 28 (expression -> factor .)


state 7

    (3) expression -> - . factor factor
    (42) factor -> - . INTEGER
    (43) factor -> - . FLOAT
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    INTEGER         shift and go to state 43
    FLOAT           shift and go to state 44
    ID              shift and go to state 40
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 42

state 8

    (4) expression -> * . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 45

state 9

    (5) expression -> / . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 46

state 10

    (6) expression -> POW . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 47

state 11

    (7) expression -> < . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 48

state 12

    (8) expression -> > . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 49

state 13

    (9) expression -> EQ . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 50

state 14

    (10) expression -> NEQ . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 51

state 15

    (11) expression -> LE . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 52

state 16

    (12) expression -> GE . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 53

state 17

    (13) expression -> ISEQ . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 54

state 18

    (14) expression -> AND . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 55

state 19

    (15) expression -> OR . factor factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 56

state 20

    (16) expression -> ABS . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 57

state 21

    (17) expression -> ROUND . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 58

state 22

    (18) expression -> ISNUMBER . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 59

state 23

    (19) expression -> NOT . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 60

state 24

    (20) expression -> DEF . ID expression

    ID              shift and go to state 61


state 25

    (24) expression -> ID . ( list_prod )
    (39) factor -> ID .

    (               shift and go to state 62
    )               reduce using rule 39 (factor -> ID .)


state 26

    (21) expression -> IF . ( expression ) ( expression ) ( expression )

    (               shift and go to state 63


state 27

    (22) expression -> LIST . ( list_prod )

    (               shift and go to state 64


state 28

    (23) expression -> DEFUN . ( name ) ( variables ) ( fun_body )

    (               shift and go to state 65


state 29

    (29) expression -> MIN . listy
    (35) listy -> . ID
    (36) listy -> . LIST ( list_prod )

    ID              shift and go to state 67
    LIST            shift and go to state 68

    listy                          shift and go to state 66

state 30

    (30) expression -> MAX . listy
    (35) listy -> . ID
    (36) listy -> . LIST ( list_prod )

    ID              shift and go to state 67
    LIST            shift and go to state 68

    listy                          shift and go to state 69

state 31

    (31) expression -> CAR . listy
    (35) listy -> . ID
    (36) listy -> . LIST ( list_prod )

    ID              shift and go to state 67
    LIST            shift and go to state 68

    listy                          shift and go to state 70

state 32

    (32) expression -> CDR . listy
    (35) listy -> . ID
    (36) listy -> . LIST ( list_prod )

    ID              shift and go to state 67
    LIST            shift and go to state 68

    listy                          shift and go to state 71

state 33

    (33) expression -> LEN . listy
    (35) listy -> . ID
    (36) listy -> . LIST ( list_prod )

    ID              shift and go to state 67
    LIST            shift and go to state 68

    listy                          shift and go to state 72

state 34

    (34) expression -> APPEND . listy listy
    (35) listy -> . ID
    (36) listy -> . LIST ( list_prod )

    ID              shift and go to state 67
    LIST            shift and go to state 68

    listy                          shift and go to state 73

state 35

    (40) factor -> INTEGER .

    )               reduce using rule 40 (factor -> INTEGER .)
    ID              reduce using rule 40 (factor -> INTEGER .)
    INTEGER         reduce using rule 40 (factor -> INTEGER .)
    FLOAT           reduce using rule 40 (factor -> INTEGER .)
    -               reduce using rule 40 (factor -> INTEGER .)
    (               reduce using rule 40 (factor -> INTEGER .)


state 36

    (41) factor -> FLOAT .

    )               reduce using rule 41 (factor -> FLOAT .)
    ID              reduce using rule 41 (factor -> FLOAT .)
    INTEGER         reduce using rule 41 (factor -> FLOAT .)
    FLOAT           reduce using rule 41 (factor -> FLOAT .)
    -               reduce using rule 41 (factor -> FLOAT .)
    (               reduce using rule 41 (factor -> FLOAT .)


state 37

    (44) factor -> ( expression . )

    )               shift and go to state 74


state 38

    (1) S -> ( expression ) .

    $end            reduce using rule 1 (S -> ( expression ) .)


state 39

    (2) expression -> + factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 75

state 40

    (39) factor -> ID .

    ID              reduce using rule 39 (factor -> ID .)
    INTEGER         reduce using rule 39 (factor -> ID .)
    FLOAT           reduce using rule 39 (factor -> ID .)
    -               reduce using rule 39 (factor -> ID .)
    (               reduce using rule 39 (factor -> ID .)
    )               reduce using rule 39 (factor -> ID .)


state 41

    (42) factor -> - . INTEGER
    (43) factor -> - . FLOAT

    INTEGER         shift and go to state 76
    FLOAT           shift and go to state 77


state 42

    (3) expression -> - factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 78

state 43

    (42) factor -> - INTEGER .
    (40) factor -> INTEGER .

    )               reduce using rule 42 (factor -> - INTEGER .)
    ID              reduce using rule 40 (factor -> INTEGER .)
    INTEGER         reduce using rule 40 (factor -> INTEGER .)
    FLOAT           reduce using rule 40 (factor -> INTEGER .)
    -               reduce using rule 40 (factor -> INTEGER .)
    (               reduce using rule 40 (factor -> INTEGER .)


state 44

    (43) factor -> - FLOAT .
    (41) factor -> FLOAT .

    )               reduce using rule 43 (factor -> - FLOAT .)
    ID              reduce using rule 41 (factor -> FLOAT .)
    INTEGER         reduce using rule 41 (factor -> FLOAT .)
    FLOAT           reduce using rule 41 (factor -> FLOAT .)
    -               reduce using rule 41 (factor -> FLOAT .)
    (               reduce using rule 41 (factor -> FLOAT .)


state 45

    (4) expression -> * factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 79

state 46

    (5) expression -> / factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 80

state 47

    (6) expression -> POW factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 81

state 48

    (7) expression -> < factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 82

state 49

    (8) expression -> > factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 83

state 50

    (9) expression -> EQ factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 84

state 51

    (10) expression -> NEQ factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 85

state 52

    (11) expression -> LE factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 86

state 53

    (12) expression -> GE factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 87

state 54

    (13) expression -> ISEQ factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 88

state 55

    (14) expression -> AND factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 89

state 56

    (15) expression -> OR factor . factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    ID              shift and go to state 40
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    -               shift and go to state 41
    (               shift and go to state 3

    factor                         shift and go to state 90

state 57

    (16) expression -> ABS factor .

    )               reduce using rule 16 (expression -> ABS factor .)


state 58

    (17) expression -> ROUND factor .

    )               reduce using rule 17 (expression -> ROUND factor .)


state 59

    (18) expression -> ISNUMBER factor .

    )               reduce using rule 18 (expression -> ISNUMBER factor .)


state 60

    (19) expression -> NOT factor .

    )               reduce using rule 19 (expression -> NOT factor .)


state 61

    (20) expression -> DEF ID . expression
    (2) expression -> . + factor factor
    (3) expression -> . - factor factor
    (4) expression -> . * factor factor
    (5) expression -> . / factor factor
    (6) expression -> . POW factor factor
    (7) expression -> . < factor factor
    (8) expression -> . > factor factor
    (9) expression -> . EQ factor factor
    (10) expression -> . NEQ factor factor
    (11) expression -> . LE factor factor
    (12) expression -> . GE factor factor
    (13) expression -> . ISEQ factor factor
    (14) expression -> . AND factor factor
    (15) expression -> . OR factor factor
    (16) expression -> . ABS factor
    (17) expression -> . ROUND factor
    (18) expression -> . ISNUMBER factor
    (19) expression -> . NOT factor
    (20) expression -> . DEF ID expression
    (21) expression -> . IF ( expression ) ( expression ) ( expression )
    (22) expression -> . LIST ( list_prod )
    (23) expression -> . DEFUN ( name ) ( variables ) ( fun_body )
    (24) expression -> . ID ( list_prod )
    (28) expression -> . factor
    (29) expression -> . MIN listy
    (30) expression -> . MAX listy
    (31) expression -> . CAR listy
    (32) expression -> . CDR listy
    (33) expression -> . LEN listy
    (34) expression -> . APPEND listy listy
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
    (42) factor -> . - INTEGER
    (43) factor -> . - FLOAT
    (44) factor -> . ( expression )

    +               shift and go to state 5
    -               shift and go to state 7
    *               shift and go to state 8
    /               shift and go to state 9
    POW             shift and go to state 10
    <               shift and go to state 11
    >               shift and go to state 12
    EQ              shift and go to state 13
    NEQ             shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    ISEQ            shift and go to state 17
    AND             shift and go to state 18
    OR              shift and go to state 19
    ABS             shift and go to state 20
    ROUND           shift and go to state 21
    ISNUMBER        shift and go to state 22
    NOT             shift and go to state 23
    DEF             shift and go to state 24
    IF              shift and go to state 26
    LIST            shift and go to state 27
    DEFUN           shift and go to state 28
    ID              shift and go to state 25
    MIN             shift and go to state 29
    MAX             shift and go to state 30
    CAR             shift and go to state 31
    CDR             shift and go to state 32
    LEN             shift and go to state 33
    APPEND          shift and go to state 34
    INTEGER         shift and go to state 35
    FLOAT           shift and go to state 36
    (               shift and go to state 3

    expression                     shift and go to state 91
    factor                         shift and go to state 6

state 62

    (24) expression -> ID ( . list_prod )
    (37) list_prod -> . factor
    (38) list_prod -> . list_prod factor
    (39) factor -> . ID
    (40) factor -> . INTEGER
    (41) factor -> . FLOAT
